cmake_minimum_required(VERSION 4.1)
project(CS310)

set(CMAKE_CXX_STANDARD 20)

# add_executable(Ch03Exercise07 Ch03Exercise07.cpp)
# add_executable(M1_Discussion_Ganthier M1_Discussion_Ganthier.cpp)
# add_executable(M1_Discussion_Preller M1_Discussion_Preller.cpp)
# add_executable(M3_Discussion_Turman M3_Discussion_Turman.cpp)
# add_executable(Ch04Exercise16 Ch04Exercise16.cpp)
add_executable(M3_Discussion_Preller M3_Discussion_Preller.cpp)
