cmake_minimum_required(VERSION 4.1)
project(CS310)

set(CMAKE_CXX_STANDARD 20)

# add_executable(Ch03Exercise07 Ch03Exercise07.cpp)
# add_executable(M1_Discussion_Ganthier M1_Discussion_Ganthier.cpp)
# add_executable(M1_Discussion_Preller M1_Discussion_Preller.cpp)
# add_executable(M3_Discussion_Turman M3_Discussion_Turman.cpp)
# add_executable(Ch04Exercise16 Ch04Exercise16.cpp)
# add_executable(M3_Discussion_Preller M3_Discussion_Preller.cpp)
# add_executable(M3_Discussion_Ganthier M3_Discussion_Ganthier.cpp)
# add_executable(M3_Discussion_Planck M3_Discussion_Planck.cpp)
# add_executable(M4_Discussion_Turman M4_Discussion_Turman.cpp)
# add_executable(M4_Discussion_Preller M4_Discussion_Preller.cpp)
# add_executable(Ch05Exercise33 Ch05Exercise33.cpp)
# add_executable(M5_Discussion_Turman M5_Discussion_Turman.cpp)
# add_executable(M5_Discussion_Preller M5_Discussion_Preller.cpp)
# add_executable(Ch06Exercise14 Ch06Exercise14.cpp)
# add_executable(Ch06Exercise14_simulation CLEAN/Ch06Exercise14_simulation.cpp)
# add_executable(M6_Discussion_Turman CLEAN/M6_Discussion_Turman.cpp)
# add_executable(M6_Discussion_Turman_broken M6_Discussion_Turman.cpp)
# add_executable(M6_Discussion_Dorscher M6_Discussion_Dorscher.cpp)
# add_executable(Ch07Exercise04 Ch07Exercise04.cpp)
# add_executable(M7_Discussion_Turman CLEAN/M7_Discussion_Turman.cpp)
# add_executable(M7_Discussion_Turman M7_Discussion_Turman.cpp)
add_executable(M7_Discussion_Preller M7_Discussion_Preller.cpp)

